<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/iv_upper_banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contDescriptionBanner"/>
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/title_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="tv_title,tv_director,tv_director_name,iv_poster"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/iv_upper_banner"
        app:layout_constraintEnd_toStartOf="@id/iv_poster"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_goneMarginEnd="16dp"
        app:layout_constrainedWidth="true" />

    <TextView
        android:id="@+id/tv_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/content_start"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_director_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director_name"
        app:layout_constraintStart_toEndOf="@id/tv_director"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_director"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/iv_poster"
        app:layout_constraintHorizontal_bias="0"
        />

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_upper_banner"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        android:src="@drawable/poster2"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contDescriptionPoster"
         />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/title_section_bottom_barrier"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/title_section_bottom_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="tv_title, tv_director, tv_director_name, iv_poster"
        app:barrierDirection="bottom"/>

    <TextView
        android:id="@+id/actors_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/actors_label"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        />
    
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/actors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="actor_1,actor_2,actor_3,actor_4"
        app:layout_constraintTop_toBottomOf="@id/actors_label"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        android:layout_marginTop="8dp"
        app:flow_wrapMode="chain"
        app:flow_horizontalBias="0"
        app:flow_horizontalStyle="packed"
        app:flow_verticalStyle="packed"
        app:flow_horizontalGap="8dp"
        app:flow_verticalGap="8dp"
        />


    <TextView
        android:id="@+id/actor_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Actor"
        android:text="@string/actor_1"
        />

    <TextView
        android:id="@+id/actor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Actor"
        android:text="@string/actor_2"
        />

    <TextView
        android:id="@+id/actor_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Actor"
        android:text="@string/actor_3"
        />

    <TextView
        android:id="@+id/actor_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Actor"
        android:text="@string/actor_4"
        />
    
    <Button
        android:id="@+id/btn_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/actors"
        app:layout_constraintEnd_toStartOf="@id/btn_watch"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        android:id="@+id/btn_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watch"
        app:layout_constraintStart_toEndOf="@id/btn_like"
        app:layout_constraintTop_toBottomOf="@id/actors"
        app:layout_constraintEnd_toStartOf="@id/btn_share"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:layout_constraintStart_toEndOf="@id/btn_watch"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintTop_toBottomOf="@id/actors"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>